--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,5 +1,5 @@
-@import "./fonts.css";
-@import "./tailwind.css";
+@import './fonts.css';
+@import './tailwind.css';
 
 input {
   font-family: inherit;
